--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,14 +118,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-
-    compile('org.twitter4j:twitter4j-core:4.0.2') {
-        transitive = true
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
-
-    compile project(":social:facebook")
-    compile project(":social:vksdk_library")
     compile project(":social:odnoklassniki-android-sdk")
     compile project(":elkag")
 
@@ -147,19 +139,24 @@ dependencies {
             abortOnError false
         }
     }
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    compile('com.twitter.sdk.android:twitter-core:1.3.1@aar') {
+        transitive = true
+    }
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:support-annotations:23.3.0'
-    compile 'com.google.android.gms:play-services:9.2.1'
+    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:support-annotations:24.1.1'
+    compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.googlecode.libphonenumber:libphonenumber:7.4.3'
     compile 'com.jakewharton:butterknife:8.2.1'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.2.1'
-    compile 'com.google.android.gms:play-services-auth:9.2.1'
-    compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile 'com.google.android.gms:play-services-ads:9.4.0'
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.12.1'
+    compile 'com.vk:androidsdk:1.6.7'
 }
 
 configurations.all {
