--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,16 +138,22 @@
                     android:scheme="x-oauthflow-twitter"/>
             </intent-filter>
         </activity>
+
         <activity
-            android:name="com.facebook.LoginActivity"
-            android:configChanges="orientation|screenSize"
-            android:label="@string/auth"
-            android:screenOrientation="portrait"/>
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
         <activity
             android:name="ru.mos.polls.social.auth.FbAuthActivity"
-            android:configChanges="orientation|screenSize"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/auth"
             android:screenOrientation="portrait"/>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/fb_app_id"/>
         <activity
             android:name=".profile.gui.activity.ChildrenBirthdaysActivity"
             android:screenOrientation="portrait"
@@ -268,7 +274,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
 
-        <activity android:name="com.vk.sdk.VKOpenAuthActivity"/>
+        <activity
+            android:name="com.vk.sdk.VKServiceActivity"
+            android:label="ServiceActivity"
+            android:theme="@style/VK.Transparent"/>
 
         <activity
             android:name=".social.auth.VkAuthActivity"
