--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,7 +118,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile project(":social:odnoklassniki-android-sdk")
     compile project(":elkag")
 
     compile(name: 'swipelistview-1.0-SNAPSHOT', ext: 'aar') {
@@ -140,6 +139,7 @@ dependencies {
         }
     }
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    compile 'com.jakewharton:butterknife:8.2.1'
     compile('com.twitter.sdk.android:twitter-core:1.3.1@aar') {
         transitive = true
     }
@@ -149,7 +149,6 @@ dependencies {
     compile 'com.android.support:support-annotations:23.+'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.googlecode.libphonenumber:libphonenumber:7.4.3'
-    compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.google.android.gms:play-services-ads:9.4.0'
@@ -157,6 +156,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.12.1'
     compile 'com.vk:androidsdk:1.6.7'
+    compile(name: 'ok-sdk', ext: 'aar')
 }
 
 configurations.all {
