--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,19 @@
 language: android
+jdk: oraclejdk7
+
 android:
   components:
-    - build-tools-22.0.1
+    - platform-tools
+    - tools
     - android-23
-    - add-on
-    - extra
+    - build-tools-22.0.1
+    - extra-android-m2repository
+    - extra-android-support
+
+notifications:
+  email: true
+
+cache:
+  directories:
+    - $HOME/.m2
+    - $HOME/.gradle
