--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ android:
     - tools
     - android-23
     - build-tools-22.0.1
-    - extra-android-m2repository
-    - extra-android-support
+    - add-on
+    - extra
 
 notifications:
   email: true
