--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ jdk: oraclejdk7
 
 android:
   components:
-    - android-23
+    - tools
     - build-tools-23.0.2
+    - android-23
     - add-on
     - extra
 
