--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,7 @@ android {
                     minifyEnabled false
                     signingConfig signingConfigs.release
                     proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+                    debuggable true
                 }
 
                 customer {
