--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,6 +157,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.12.1'
     compile 'com.vk:androidsdk:1.6.7'
     compile(name: 'ok-sdk', ext: 'aar')
+    compile 'com.android.support:recyclerview-v7:23.+'
 }
 
 configurations.all {
