--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,6 +146,7 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:support-v4:23.+'
     compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:design:23+'
     compile 'com.android.support:support-annotations:23.+'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.googlecode.libphonenumber:libphonenumber:7.4.3'
