--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,14 +120,6 @@ dependencies {
 
     compile project(":elkag")
 
-    compile(name: 'swipelistview-1.0-SNAPSHOT', ext: 'aar') {
-        transitive = true
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
-    compile('com.nineoldandroids:library:2.4.0+') {
-        transitive = true
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
         transitive = true;
         exclude group: 'com.android.support', module: 'support-v4'
@@ -159,6 +151,7 @@ dependencies {
     compile 'com.vk:androidsdk:1.6.7'
     compile(name: 'ok-sdk', ext: 'aar')
     compile 'com.android.support:recyclerview-v7:23.+'
+    compile 'com.android.support:cardview-v7:23.+'
 }
 
 configurations.all {
