--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
         targetSdkVersion 23
         multiDexEnabled true
         resConfigs "en"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     compileOptions {
@@ -117,6 +118,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+    testCompile 'junit:junit:4.12'
 
     compile project(":elkag")
 
