--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
@@ -12,6 +13,7 @@ buildscript {
 
 repositories {
     mavenCentral()
+    jcenter()
     flatDir {
         dirs 'libs'
     }
