--- a/elkag/build.gradle
+++ b/elkag/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
@@ -10,6 +11,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'android-apt'
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
