--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ cache:
 
 before_script:
   # Create and start emulator
-  - echo no | android create avd --force -n test -t android-23
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
