--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,13 @@ android:
     - tools
     - build-tools-23.0.2
     - android-23
-    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-android-23
     - add-on
     - extra
 
 notifications:
-  email: true
+  email:
+    - elizarov1988@gmail.com
 
 cache:
   directories:
@@ -22,7 +23,7 @@ cache:
 
 before_script:
   # Create and start emulator
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
