--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,19 @@ sudo: required
 language: android
 jdk: oraclejdk7
 
+env:
+  global:
+    - ANDROID_API_LEVEL=23
+    - ANDROID_BUILD_TOOLS_VERSION=23.0.2
+    - ANDROID_ABI=google_apis/armeabi-v7a
+
 android:
   components:
     - tools
-    - build-tools-23.0.2
-    - android-23
-    - sys-img-armeabi-v7a-android-23
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
     - add-on
     - extra
 
@@ -23,7 +30,7 @@ cache:
 
 before_script:
   # Create and start emulator
-  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a-android-23
+  - echo no | android create avd --force -n test -t "android-23" --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
