travise ci fix for android target fro emulator

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,15 @@ env:
     - ANDROID_API_LEVEL=23
     - ANDROID_BUILD_TOOLS_VERSION=23.0.2
     - ANDROID_ABI=google_apis/armeabi-v7a
+    - ANDROID_TAG=google_apis
 
 android:
   components:
     - tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
     - add-on
     - extra
 
@@ -29,10 +30,8 @@ cache:
     - $HOME/.gradle
 
 before_script:
-  # Create and start emulator
-  - echo no | android create avd --force -n test -t "android-23" --abi $ANDROID_ABI
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
-  - adb shell input keyevent 82 &
 
 script: ./gradlew connectedAndroidTest
