--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ android {
     }
 
     dexOptions {
-        incremental = true;
+//        incremental = true;
         preDexLibraries = false
         javaMaxHeapSize "4g"
     }
