--- a/elkag/build.gradle
+++ b/elkag/build.gradle
@@ -24,11 +24,14 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         minSdkVersion 15
     }
+
     lintOptions {
         abortOnError true
     }
