--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ env:
     - ANDROID_BUILD_TOOLS_VERSION=23.0.3
     - ANDROID_ABI=google_apis/armeabi-v7a
     - ANDROID_TAG=google_apis
+    # wait up to 10 minutes for adb to connect to emulator
+    - ADB_INSTALL_TIMEOUT=10
 
 android:
   components:
@@ -38,5 +40,6 @@ before_script:
   - echo no | android create avd --force -n test -t "android-"$ANDROID_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-skin -no-audio -no-window -gpu off &
   - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script: ./gradlew connectedAndroidTest
