--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,12 +55,14 @@
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="ru.mos.polls.AgPhoneConfirmActivity"
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="ru.mos.polls.AgRegisterActivity"
