--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ jdk: oraclejdk8
 env:
   global:
     - ANDROID_API_LEVEL=23
-    - ANDROID_API_LEVEL_EMULATOR=16
     - ANDROID_BUILD_TOOLS_VERSION=23.0.3
     - ANDROID_ABI=google_apis/armeabi-v7a
     - ANDROID_TAG=google_apis
@@ -38,7 +37,7 @@ cache:
     - $HOME/.gradle
 
 before_script:
-  - echo no | android create avd --force -n test -t "android-"$ANDROID_API_LEVEL_EMULATOR --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-skin -no-audio -no-window -gpu off &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
