--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,16 @@ env:
     - ANDROID_BUILD_TOOLS_VERSION=25.0.0
     - ANDROID_ABI=google_apis/armeabi-v7a
     - ANDROID_TAG=google_apis
-    # wait up to 10 minutes for adb to connect to emulator
-    - ADB_INSTALL_TIMEOUT=10
+    # wait up to 60 minutes for adb to connect to emulator
+    - ADB_INSTALL_TIMEOUT=60
 
 android:
   components:
     - tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
-    - android-16
     - addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-android-16
     - add-on
     - extra
 
@@ -39,7 +37,7 @@ cache:
     - $HOME/.gradle
 
 before_script:
-  - echo no | android create avd --force -n test -t android-16 --abi sys-img-armeabi-v7a-android-16 --tag $ANDROID_TAG
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-skin -no-audio -no-window -gpu off &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
