--- a/app/build.gradle
+++ b/app/build.gradle
@@ -165,6 +165,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.+'
     compile 'pub.devrel:easypermissions:0.1.9'
 
+    compile 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.0'
+
 }
 
 configurations.all {
