--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ notifications:
 #    - sklyarovdv@mos.ru
 #    - fastsilver2009@gmail.com
 
-cache:
+cache:р
   directories:
     - $HOME/.m2
     - $HOME/.gradle
