--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <!--<uses-permission-->
-        <!--android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>-->
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
@@ -34,9 +32,9 @@
     <application
         android:name="ru.mos.polls.AGApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_v230"
         android:label="@string/app_name"
-        android:logo="@drawable/ic_launcher"
+        android:logo="@drawable/ic_launcher_v230"
         android:theme="@style/AppTheme"
         tools:replace="theme,icon">
         <activity
