--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ repositories {
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -29,7 +30,7 @@ repositories {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.3'
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
@@ -41,6 +42,9 @@ android {
         multiDexEnabled true
         resConfigs "en"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled false
+        }
     }
 
     testOptions {
@@ -48,8 +52,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     buildTypes {
@@ -167,6 +171,17 @@ dependencies {
 
     compile 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.0'
 
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    compile 'com.squareup.retrofit2:adapter-rxjava2:+'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile "com.squareup.retrofit2:converter-moshi:2.3.0"
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile 'com.google.code.gson:gson:2.7'
 }
 
 configurations.all {
