--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,15 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.3.1'
         classpath 'io.fabric.tools:gradle:1.20.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'me.tatarka:gradle-retrolambda:3.6.1'
     }
 }
 
 allprojects {
     repositories {
+        maven {
+            url 'https://dl.bintray.com/dsokolov/maven'
+        }
         mavenCentral()
         jcenter()
     }
