--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,9 @@ android {
             enabled false
         }
     }
-
+    dataBinding {
+        enabled = false
+    }
     testOptions {
         unitTests.returnDefaultValues = true
     }
@@ -182,6 +184,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.google.code.gson:gson:2.7'
+
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
 }
 
 configurations.all {
