--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url 'https://dl.bintray.com/dsokolov/maven'
-        }
+        maven { url 'https://dl.bintray.com/dsokolov/maven' }
+        maven { url 'https://maven.google.com' }
         mavenCentral()
         jcenter()
     }
