--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
         }
     }
     dataBinding {
-        enabled = false
+        enabled = true
     }
     testOptions {
         unitTests.returnDefaultValues = true
@@ -153,22 +153,30 @@ dependencies {
         transitive = true
     }
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:support-v4:23.+'
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.android.support:design:23+'
-    compile 'com.android.support:support-annotations:23.+'
+    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:support-annotations:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'com.google.android.gms:play-services:9.4.0'
-    compile 'com.googlecode.libphonenumber:libphonenumber:7.4.3'
-    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
+
     compile 'com.google.android.gms:play-services-ads:9.4.0'
     compile 'com.google.android.gms:play-services-auth:9.4.0'
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
+
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    apt 'com.android.databinding:compiler:2.3.0'
+
+    compile 'com.googlecode.libphonenumber:libphonenumber:7.4.3'
+    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
+    //social sdk
     compile 'com.facebook.android:facebook-android-sdk:4.12.1'
     compile 'com.vk:androidsdk:1.6.7'
     compile(name: 'ok-sdk', ext: 'aar')
-    compile 'com.android.support:recyclerview-v7:23.+'
-    compile 'com.android.support:cardview-v7:23.+'
+
     compile 'pub.devrel:easypermissions:0.1.9'
 
     compile 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.0'
@@ -181,12 +189,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile "com.squareup.retrofit2:converter-moshi:2.3.0"
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.google.code.gson:gson:2.7'
-
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
 }
 
 configurations.all {
