--- a/elkag/build.gradle
+++ b/elkag/build.gradle
@@ -16,8 +16,8 @@ repositories {
 
 dependencies {
     compile 'me.ilich:juggler:0.1.20'
-    compile 'com.android.support:support-v4:23.2.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-v4:24.+'
+    compile 'com.android.support:appcompat-v7:24.+'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
