--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ repositories {
 }
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion '25.0.3'
     useLibrary 'org.apache.http.legacy'
 
@@ -153,14 +153,14 @@ dependencies {
         transitive = true
     }
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:support-v4:23.2.0'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
-    compile 'com.android.support:support-annotations:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.0'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
-    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.android.support:support-v4:25.+'
+    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support:design:25.+'
+    compile 'com.android.support:support-annotations:25.+'
+    compile 'com.android.support:cardview-v7:25.+'
+    compile 'com.android.support:recyclerview-v7:25.+'
 
+    compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.google.android.gms:play-services-ads:9.4.0'
     compile 'com.google.android.gms:play-services-auth:9.4.0'
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
@@ -191,10 +191,4 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
     compile 'com.google.code.gson:gson:2.7'
-}
-
-configurations.all {
-    resolutionStrategy {
-        force 'com.android.support:appcompat-v7:22.2.0'
-    }
 }
