--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'io.fabric.tools:gradle:1.20.1'
 
     }
@@ -21,7 +21,7 @@ repositories {
 
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
-apply plugin: 'android-apt'
+//apply plugin: 'android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 
 repositories {
@@ -147,7 +147,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v4'
     }
 
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.jakewharton:butterknife:8.2.1'
     compile('com.twitter.sdk.android:twitter-core:1.3.1@aar') {
         transitive = true
@@ -166,7 +166,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
 
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    apt 'com.android.databinding:compiler:2.3.0'
+    annotationProcessor 'com.android.databinding:compiler:2.3.0'
 
     compile 'com.googlecode.libphonenumber:libphonenumber:7.4.3'
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
@@ -184,11 +184,22 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
-    compile 'com.squareup.retrofit2:adapter-rxjava2:+'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile "com.squareup.retrofit2:converter-moshi:2.3.0"
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
     compile 'com.google.code.gson:gson:2.7'
+
+//    compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
+//    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
+//    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
+
+//    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha1"
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha1"
+
+    compile 'com.google.dagger:dagger:2.7'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
 }
