--- a/elkag/build.gradle
+++ b/elkag/build.gradle
@@ -4,11 +4,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
     }
 }
 apply plugin: 'com.android.library'
-apply plugin: 'android-apt'
+//apply plugin: 'android-apt'
 repositories {
     mavenCentral()
     jcenter()
@@ -20,7 +20,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.+'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.jakewharton:butterknife:8.2.1'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile fileTree(dir: 'libs', include: '*.jar')
 }
 
