--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,9 @@ android {
         preDexLibraries = false
         javaMaxHeapSize "4g"
     }
-
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
     if (project.hasProperty("debugSigningPropertiesPath") && project.hasProperty("releaseSigningPropertiesPath")) {
 
         File debugPropsFile = new File(System.getenv('HOME') + "/" + project.property("debugSigningPropertiesPath"))
@@ -186,7 +188,7 @@ dependencies {
 
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     compile "com.squareup.retrofit2:converter-moshi:2.3.0"
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
@@ -196,7 +198,7 @@ dependencies {
 //    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
 //    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
 
-//    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha1"
+    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha1"
     compile "android.arch.persistence.room:runtime:1.0.0-alpha1"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha1"
 
