--- a/app/build.gradle
+++ b/app/build.gradle
@@ -205,4 +205,7 @@ dependencies {
 
     compile 'com.google.dagger:dagger:2.7'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
+
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
+    compile 'pub.devrel:easypermissions:0.4.2'
 }
