--- a/app/build.gradle
+++ b/app/build.gradle
@@ -208,4 +208,7 @@ dependencies {
 
     compile 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
     compile 'pub.devrel:easypermissions:0.4.2'
+
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 }
