--- a/elkag/build.gradle
+++ b/elkag/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.google.code.gson:gson:2.8.1'
 }
 
 android {
