--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,16 +144,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(":elkag")
 
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
-        transitive = true;
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
-
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.jakewharton:butterknife:8.2.1'
-    compile('com.twitter.sdk.android:twitter-core:1.3.1@aar') {
-        transitive = true
-    }
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:support-v4:25.+'
     compile 'com.android.support:appcompat-v7:25.+'
@@ -174,10 +166,21 @@ dependencies {
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
 
-    //social sdk
-    compile 'com.facebook.android:facebook-android-sdk:4.12.1'
+    /**
+     * Библиотека mos_social для работы с соцсетями
+     */
+    compile(name: 'mos_social_0.1.79', ext: 'aar')
+    compile 'com.twitter.sdk.android:twitter:3.0.0'
+    compile 'com.twitter.sdk.android:tweet-ui:3.0.0'
+    compile 'com.twitter.sdk.android:twitter-core:3.0.0'
+    compile 'com.twitter.sdk.android:tweet-composer:3.0.0'
     compile 'com.vk:androidsdk:1.6.7'
-    compile(name: 'ok-sdk', ext: 'aar')
+    compile 'com.facebook.android:facebook-android-sdk:4.12.1'
+    compile 'ru.ok:odnoklassniki-android-sdk:2.0.8'
+    compile 'com.google.android.gms:play-services-auth:11.0.2'
+    compile 'com.squareup.okhttp:okhttp:2.6.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    //
 
     compile 'pub.devrel:easypermissions:0.1.9'
 
