--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,10 +154,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.+'
     compile 'com.android.support:recyclerview-v7:25.+'
 
-    compile 'com.google.android.gms:play-services:11.0.2'
-    compile 'com.google.android.gms:play-services-ads:11.0.2'
-    compile 'com.google.android.gms:play-services-auth:11.0.2'
-    compile 'com.google.android.gms:play-services-gcm:11.0.2'
+    compile 'com.google.android.gms:play-services-location:11.0.4'
+    compile 'com.google.android.gms:play-services-analytics:11.0.4'
 
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.android.databinding:compiler:2.3.0'
@@ -177,14 +175,14 @@ dependencies {
     compile 'com.vk:androidsdk:1.6.7'
     compile 'com.facebook.android:facebook-android-sdk:4.12.1'
     compile 'ru.ok:odnoklassniki-android-sdk:2.0.8'
-    compile 'com.google.android.gms:play-services-auth:11.0.2'
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
     compile 'com.squareup.okhttp:okhttp:2.6.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     //
 
     compile 'pub.devrel:easypermissions:0.1.9'
 
-    compile 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.0'
+    compile 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.7.0'
 
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
