--- a/elkag/build.gradle
+++ b/elkag/build.gradle
@@ -18,7 +18,8 @@ dependencies {
     compile 'me.ilich:juggler:0.1.20'
     compile 'com.android.support:support-v4:24.+'
     compile 'com.android.support:appcompat-v7:24.+'
-    compile 'com.google.android.gms:play-services:7.5.0'
+//    compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.google.android.gms:play-services-gcm:11.0.4'
     compile 'com.jakewharton:butterknife:8.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile fileTree(dir: 'libs', include: '*.jar')
