travis script fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ env:
     - TAG=google_apis
     - ABI=armeabi-v7a
     - QEMU_AUDIO_DRV=none
-    - GRADLE_USER_HOME=\"${TRAVIS_BUILD_DIR}/gradle\"
+    - GRADLE_USER_HOME="${TRAVIS_BUILD_DIR}/gradle"
     - ANDROID_HOME=/usr/local/android-sdk-25.0.3
     - TOOLS=${ANDROID_HOME}/tools
     - PATH=${ANDROID_HOME}:${ANDROID_HOME}/emulator:${TOOLS}:${TOOLS}/bin:${ANDROID_HOME}/platform-tools:${PATH}
@@ -73,37 +73,37 @@ android:
 
 before_install:
 #  - yes | sdkmanager "platforms;android-25"
-  - export EMULATOR=\"system-images;android-${API};${TAG};${ABI}\"
+  - export EMULATOR="system-images;android-${API};${TAG};${ABI}"
   - echo 'count=0' > /home/travis/.android/repositories.cfg
 
 install:
   - sdkmanager --list || true
-  - sdkmanager --uninstall \"system-images;android-15;default;armeabi-v7a\"
-  - sdkmanager --uninstall \"system-images;android-16;default;armeabi-v7a\"
-  - sdkmanager --uninstall \"system-images;android-17;default;armeabi-v7a\"
-  - sdkmanager --uninstall \"system-images;android-18;default;armeabi-v7a\"
-  - sdkmanager --uninstall \"system-images;android-19;default;armeabi-v7a\"
-  - sdkmanager --uninstall \"system-images;android-21;default;armeabi-v7a\"
-  - sdkmanager --uninstall \"extras;google;google_play_services\"
-  - sdkmanager --uninstall \"extras;android;support\"
-  - sdkmanager --uninstall \"platforms;android-10\"
-  - sdkmanager --uninstall \"platforms;android-15\"
-  - sdkmanager --uninstall \"platforms;android-16\"
-  - sdkmanager --uninstall \"platforms;android-17\"
-  - sdkmanager --uninstall \"platforms;android-18\"
-  - sdkmanager --uninstall \"platforms;android-19\"
-  - sdkmanager --uninstall \"platforms;android-20\"
-  - sdkmanager --uninstall \"platforms;android-21\"
-  - sdkmanager --uninstall \"build-tools;21.1.2\"
-  - echo yes | sdkmanager \"tools\"
-  - echo yes | sdkmanager \"platforms;android-25\"
-  - echo yes | sdkmanager \"platforms;android-${API}\"
-  - echo yes | sdkmanager \"extras;android;m2repository\"
-  - echo yes | sdkmanager \"extras;google;m2repository\"
-  - echo yes | sdkmanager \"extras;m2repository;com;android;support;constraint;constraint-layout;1.0.2\"
-  - echo yes | sdkmanager \"extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2\"
-  - echo yes | sdkmanager \"$EMULATOR\"
-  - echo no | avdmanager create avd -n acib -k \"$EMULATOR\" -f --abi \"$ABI\" --tag \"$TAG\"
+  - sdkmanager --uninstall "system-images;android-15;default;armeabi-v7a"
+  - sdkmanager --uninstall "system-images;android-16;default;armeabi-v7a"
+  - sdkmanager --uninstall "system-images;android-17;default;armeabi-v7a"
+  - sdkmanager --uninstall "system-images;android-18;default;armeabi-v7a"
+  - sdkmanager --uninstall "system-images;android-19;default;armeabi-v7a"
+  - sdkmanager --uninstall "system-images;android-21;default;armeabi-v7a"
+  - sdkmanager --uninstall "extras;google;google_play_services"
+  - sdkmanager --uninstall "extras;android;support"
+  - sdkmanager --uninstall "platforms;android-10"
+  - sdkmanager --uninstall "platforms;android-15"
+  - sdkmanager --uninstall "platforms;android-16"
+  - sdkmanager --uninstall "platforms;android-17"
+  - sdkmanager --uninstall "platforms;android-18"
+  - sdkmanager --uninstall "platforms;android-19"
+  - sdkmanager --uninstall "platforms;android-20"
+  - sdkmanager --uninstall "platforms;android-21"
+  - sdkmanager --uninstall "build-tools;21.1.2"
+  - echo yes | sdkmanager "tools"
+  - echo yes | sdkmanager "platforms;android-25"
+  - echo yes | sdkmanager "platforms;android-${API}"
+  - echo yes | sdkmanager "extras;android;m2repository"
+  - echo yes | sdkmanager "extras;google;m2repository"
+  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout;1.0.2"
+  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2"
+  - echo yes | sdkmanager "$EMULATOR"
+  - echo no | avdmanager create avd -n acib -k "$EMULATOR" -f --abi "$ABI" --tag "$TAG"
   - emulator -avd acib -engine classic -no-window -camera-back none -camera-front none -verbose -qemu -m 512 &
   - adb wait-for-device get-serialno
   - cd ${TRAVIS_BUILD_DIR}/${DIR} && ./gradlew --version
