--- a/.travis.yml
+++ b/.travis.yml
@@ -127,17 +127,18 @@
 #  - adb shell input keyevent 82 &
 language: android
 jdk: oraclejdk8
-# Use the Travis Container-Based Infrastructure
-sudo: false
+# Use the Travis Sudo-enabled VM Infrastructure
+sudo: required
+dist: precise
 
-cache:
-  directories:
-    - ${TRAVIS_BUILD_DIR}/gradle/caches/
-    - ${TRAVIS_BUILD_DIR}/gradle/wrapper/dists/
+#cache:
+#  directories:
+#    - ${TRAVIS_BUILD_DIR}/gradle/caches/
+#    - ${TRAVIS_BUILD_DIR}/gradle/wrapper/dists/
 
 env:
   global:
-    - ANDROID_API_LEVEL=23
+    - ANDROID_API_LEVEL=21
     - ANDROID_APP_BUILD_TOOLS_VERSION=25.0.3
     - ANDROID_ELK_BUILD_TOOLS_VERSION=25.0.0
     - ANDROID_ABI=armeabi-v7a
@@ -159,23 +160,16 @@ android:
     - build-tools-$ANDROID_APP_BUILD_TOOLS_VERSION
     - build-tools-$ANDROID_ELK_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
-    # For Google APIs
-    - addon-google_apis-google-$ANDROID_API_LEVEL
-    # Google Play Services
-    - extra-google-google_play_services
-    # Support library
-    - extra-android-support
-    # Latest artifacts in local repository
-    - extra-google-m2repository
     - extra-android-m2repository
     # Specify at least one system image
-    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
 
 before_script:
   # Create and start emulator
-  - echo no | android create avd --force -n test -t "android-"$ANDROID_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-  - emulator -avd test -no-skin -no-window &
+  - echo no | android create avd --force -n test1 -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI
+  - emulator -avd test1 -no-skin -no-audio -no-window &
   - android-wait-for-emulator
+  - adb -s emulator-5554 shell input keyevent 82 &
 
 script:
-  - ./gradlew clean connectedAndroidTest
+  - ./gradlew clean build connectedAndroidTest -PdisablePreDex --stacktrace
