--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 //apply plugin: 'android-apt'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'jacoco-android' //codeCov
+
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -71,6 +73,7 @@ android {
             minifyEnabled false
             shrinkResources false
             debuggable true
+            testCoverageEnabled true
         }
     }
 
@@ -125,6 +128,7 @@ android {
 
                 debug {
                     signingConfig signingConfigs.debug
+                    testCoverageEnabled true
                 }
             }
         }
