--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'io.fabric.tools:gradle:1.20.1'
 //        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.6.1'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2' //codeCov
     }
 }
 
